Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85195

QWaylandWindow::attach(buffer,x,y) crash if asserts enabled and buffer==nullptr

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P4: Low
    • 6.0.0 RC
    • 5.12
    • QPA: Wayland
    • None
    • e235e8ddb1fc3cc5ab3b70b1fb285770b2c8c9ca

    Description

      QWaylandWindow::attach(buffer,x,y) crash if asserts enabled and buffer==nullptr

      possible solution:

       

      diff --git a/src/client/qwaylandwindow.cpp b/src/client/qwaylandwindow.cpp
      index 05fc7d88..cf116936 100644
      --- a/src/client/qwaylandwindow.cpp
      +++ b/src/client/qwaylandwindow.cpp
      @@ -579,8 +579,8 @@ void QWaylandWindow::handleScreenRemoved(QScreen *qScreen)
       
       void QWaylandWindow::attach(QWaylandBuffer *buffer, int x, int y)
       {
      -    Q_ASSERT(!buffer->committed());
      -    if (buffer) {
      +   if (buffer) {
      +        Q_ASSERT(!buffer->committed());
               handleUpdate();
               buffer->setBusy();
       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            roman_genkhel Roman Genhel
            roman_genkhel Roman Genhel
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes